fix: table size/overflow

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 @layer base {
+  table {
+    @apply w-full;
+    @apply text-xs;
+  }
+  @media (min-width: 640px) {
+    table {
+      @apply text-base;
+    }
+  }
   @media print {
     :root {
       font-size: 70%;
